# Abacus

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  build.sh  docker.sh  icse_artifact_evaluation.txt
.github/workflows/: mac.yml  main.yml
App/: CMakeLists.txt
App/QIF/: CMakeLists.txt  QIF-test.cpp  QIF.cpp
App/QIF/include/: QIFSEEngine.hpp
App/QIF/pintools/: MyPinToolLinux.cpp
App/QIF/src/: QIFSEEngine.cpp
Pintools/: MyPinToolLinux.cpp
Pintools/CryptoLibrary/: AES-bitslice.cpp  AES-mbedTLS-2.15.1.cpp  AES-mbedTLS-2.5.cpp  AES-openssl-0.9.7.cpp  AES-openssl-1.0.2f.cpp  AES-openssl-1.0.2k.cpp  DES-mbedTLS-2.15.cpp  DES-mbedtls-2.5.cpp  DES-openssl-0.9.7.cpp  DES-openssl-1.1.0f.cpp  DES-openssl-1.1.1.cpp  ECDSA-mbedTLS-2.15.1-nonce.cpp  ECDSA-mbedTLS-2.15.cpp  ECDSA-mbedTLS-2.5-nonce.cpp  ECDSA-mbedTLS-2.5.cpp  ECDSA-openssl-1.0.2f-nonce.cpp  ECDSA-openssl-1.0.2k-nonce.cpp  ECDSA-openssl-1.0.2k.cpp  ECDSA-openssl-1.1.0f-nonce.cpp  ECDSA-openssl-1.1.0f.cpp  ECDSA-openssl-1.1.1-nonce.cpp  ECDSA-openssl-1.1.1.cpp  RSA-libgcrypt-1.8.5.cpp  RSA-mbedTLS-2.15-key.cpp  RSA-mbedTLS-2.15.cpp  RSA-mbedTLS-2.5.cpp  RSA-mbedtls-2.15.1.cpp  RSA-mbedtls-2.5.cpp  RSA-openssl-0.9.7.cpp  RSA-openssl-1.0.2k.cpp  RSA-openssl-1.1.0f.cpp  RSA-openssl-1.1.1.cpp  RSA-openssl-1.1.1g.cpp  argon2i-monocypher-3.0.cpp  argon2i-monocypher.cpp  chacha20-monocypher-3.0.cpp  ed25519-monocyper.cpp  ed25519-monocypher-3.0.cpp  makefile.rules  poly1305-monocypher-3.0.cpp
Pintools/CryptoLibrary/mbedtls-2.15/: build_mbedtls.sh
Pintools/CryptoLibrary/mbedtls-2.5/: build_mbedtls.sh
Pintools/CryptoLibrary/openssl-1.0.2f/: ec.h
Pintools/CryptoLibrary/openssl-1.1.0f/: ec.h  openssl_rsa.h
Pintools/CryptoLibrary/openssl-1.1.1/: openssl_rsa.h
Pintools/CryptoLibrary/openssl-1.1.1g/: openssl_rsa.h
Pintools/CryptoLibrary/rsa_libgcryt/: MyPinToolLinux.cpp  config.h  rsa_type.c
QIF/: QIF.cpp
QIF/pintools/: MyPinToolLinux.cpp  makefile.rules
QIF_EXP/: QIF_EXP.cpp
cmake/: clang_tools.cmake  cppcheck.cmake
data/: README.md  metadata.tar  metadata1.tar
data/benchmarks/AES-mbedTLS-2.15/: aes_128_cbc
data/benchmarks/AES-mbedTLS-2.5/: aes_128_cbc  aes_128_cbc.c
data/benchmarks/AES-openssl-0.9.7/: aes_128_cbc  aes_128_cbc.c
data/benchmarks/AES-openssl-1.0.2f/: aes_128_cbc
data/benchmarks/AES-openssl-1.0.2k/: aes_128_cbc
data/benchmarks/AES-openssl-1.1.0f/: aes_128_cbc
data/benchmarks/AES-openssl-1.1.1/: aes_128_cbc
data/benchmarks/DES-mbedTLS-2.15.1/: des_ecb  des_ecb.c
data/benchmarks/DES-mbedTLS-2.5/: des_ecb  des_ecb.c
data/benchmarks/DES-openssl-0.9.7/: des_ecb  des_ecb.c
data/benchmarks/ECDSA-mbedTLS-2.15/: ecdsa  ecdsa.c
data/benchmarks/ECDSA-mbedTLS-2.5/: ecdsa  ecdsa.c
data/benchmarks/ECDSA-openssl-1.0.2k/: ecdsatest.c
data/benchmarks/ECDSA-openssl-1.1.0f/: ecdsatest.c
data/benchmarks/ECDSA-openssl-1.1.1g/: ecdsatest.c
data/benchmarks/LookupTable32/: array32_new  array32_new.c
data/benchmarks/LookupTable8/: array8  array8.c
data/benchmarks/RSA-libgcrypt/: rsa_1.6.2  rsa_1.7.3  rsa_1.8.5
data/benchmarks/RSA-libgcrypt-1.8.5/: libgcrypt_rsa.c  libgpg-error.so.0  rsa
data/benchmarks/RSA-mbedTLS-2.15.1/: rsa_1024
disassembler/: disassembler.py
docs/: description.md  examples.md  result.md  usage.md
examples/: example1.c  example2.c
lib/: BitVector.cpp  BitVector.hpp  Blocks.cpp  Blocks.hpp  CallStack.cpp  CallStack.hpp  Constrains.cpp  Constrains.hpp  DebugInfo.cpp  DebugInfo.hpp  DynSEEngine.cpp  DynSEEngine.hpp  ELFInfo.cpp  ELFInfo.hpp  Engine.cpp  Engine.hpp  Function.cpp  Function.hpp  InputParser.hpp  LibcModel.cpp  LibcModel.hpp  Loop.cpp  Loop.hpp  MonteCarlo.cpp  MonteCarlo.hpp  QIFSEEngine.cpp  QIFSEEngine.hpp  Register.cpp  Register.hpp  StaticSEEngine.cpp  StaticSEEngine.hpp  Tainter.cpp  Tainter.hpp  Trace2ELF.cpp  Trace2ELF.hpp  VarMap.cpp  VarMap.hpp  cmd.cpp  cmd.hpp  error.cpp  (+9 more)
script/: start.sh  start_base.sh
script/AES_MBEDTLS_2.15/: aes_mbedtls_2.15.txt  start.sh
script/AES_MBEDTLS_2.5/: aes_mbedtls_2.5.txt  start.sh
script/AES_OPENSSL_0.9.7/: aes_openssl_0.9.7.txt
script/AES_OPENSSL_1.0.2f/: aes_openssl_1.0.2f.txt
script/AES_OPENSSL_1.0.2k/: aes_openssl_1.0.2k.txt
script/AES_OPENSSL_1.1.0f/: aes_openssl_1.1.0f.txt
script/AES_OPENSSL_1.1.1/: aes_openssl_1.1.1.txt
script/CHACHA20_MONOCYPER_3.0/: start.sh
script/CHACHA20_MONOCYPHER_3.0/: chacha20_monocypher_3.0.txt  start.sh
script/DES_OPENSSL_0.9.7/: des_openssl_0.9.7.txt
script/DES_OPENSSL_1.0.2f/: des_openssl_1.0.2f.txt  start.sh
script/DES_OPENSSL_1.0.2k/: des_openssl_1.0.2k.txt
script/DES_OPENSSL_1.1.0f/: des_openssl_1.1.0f.txt
script/POLY1305_MONOCYPHER_3.0/: poly1305_monocypher_3.0.txt
script/RSA_MBEDTLS_2.15/: start.sh
script/RSA_OPENSSL_0.9.7/: private_key  public_key
script/RSA_libgcrypt_1.8.5/: start.sh
src/: BitVector.cpp  Blocks.cpp  CMakeLists.txt  CallStack.cpp  Constrains.cpp  DebugInfo.cpp  ELFInfo.cpp  Function.cpp  LibcModel.cpp  Loop.cpp  MonteCarlo.cpp  Register.cpp  Tainter.cpp  Trace2ELF.cpp  VarMap.cpp  cmd.cpp  error.cpp  external_api.cpp  ins_parser.cpp  ins_semantics.cpp  ins_types.cpp  x86.cpp
src/Engine/: DynSEEngine.cpp  Engine.cpp  StaticSEEngine.cpp
src/include/: BitVector.hpp  Blocks.hpp  CallStack.hpp  Constrains.hpp  DebugInfo.hpp  DynSEEngine.hpp  ELFInfo.hpp  Engine.hpp  Function.hpp  InputParser.hpp  LibcModel.hpp  Loop.hpp  MonteCarlo.hpp  Register.hpp  StaticSEEngine.hpp  Tainter.hpp  Trace2ELF.hpp  VarMap.hpp  cmd.hpp  error.hpp  external_api.hpp  ins_parser.hpp  ins_semantics.hpp  ins_types.hpp  x86.hpp
test/: CMakeLists.txt  test_bit.cpp  test_bitvector.cpp  test_bvmul.cpp  test_cmd.cpp  test_constrain.cpp  test_debuginfo.cpp  test_debuginfo_str.cpp  test_elf.cpp  test_elf_sym.cpp  test_eval.cpp  test_formula_hash.cpp  test_libc.c  test_qif.cpp  test_qif1.c  test_qif2.c  test_r2pipe.c  test_random_num.cpp  test_x86.cpp
(+23 files in other folders)
